<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/color_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_lg">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_calculator"
            android:layout_marginBottom="@dimen/spacing_lg"
            style="@style/ScreenTitle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_number_one"
            android:layout_marginBottom="@dimen/spacing_xs"
            style="@style/FieldLabel" />

        <EditText
            android:id="@+id/editNumberOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal|numberSigned"
            android:hint="@string/hint_number"
            android:layout_marginBottom="@dimen/spacing_md"
            style="@style/InputField" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_number_two"
            android:layout_marginBottom="@dimen/spacing_xs"
            style="@style/FieldLabel" />

        <EditText
            android:id="@+id/editNumberTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal|numberSigned"
            android:hint="@string/hint_number"
            android:layout_marginBottom="@dimen/spacing_lg"
            style="@style/InputField" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/spacing_sm">

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/spacing_sm"
                android:text="@string/button_add"
                style="@style/OperatorButton.Indigo" />

            <Button
                android:id="@+id/buttonSubtract"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/spacing_sm"
                android:text="@string/button_subtract"
                style="@style/OperatorButton.Sky" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/spacing_lg">

            <Button
                android:id="@+id/buttonMultiply"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/spacing_sm"
                android:text="@string/button_multiply"
                style="@style/OperatorButton.Sky" />

            <Button
                android:id="@+id/buttonDivide"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/spacing_sm"
                android:text="@string/button_divide"
                style="@style/OperatorButton.Indigo" />
        </LinearLayout>

        <TextView
            android:id="@+id/textError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_sm"
            android:visibility="gone"
            style="@style/ErrorText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/ResultCard">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_result"
                android:layout_marginBottom="@dimen/spacing_xs"
                style="@style/ResultLabel" />

            <TextView
                android:id="@+id/textResultValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/result_placeholder"
                style="@style/ResultValue" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
